--- a/website/index.html
+++ b/website/index.html
@@ -6,5 +6,17 @@
 </head>
 
 <body>
+<h1>My Doctor Who Website</h1>
+<h2>Homepage</h2>
+<ol>
+  <li><a href="the-doctors/doctor-01-william-hartnell.html">William Hartnell</a></li>
+  <li><a href="the-doctors/doctor-02-patrick-troughton.html">Patrick Troughton</a></li>
+  <li><a href="the-doctors/doctor-03-jon-pertwee.html">Jon Pertwee</a></li>
+  <li><a href="the-doctors/doctor-04-tom-baker.html">Tom Baker</a></li>
+  <li><a href="the-doctors/doctor-05-peter-davidson.html">Peter Davidson</a></li>
+  <li><a href="the-doctors/doctor-06-colin-baker.html">Colin Baker</a></li>
+  <li><a href="the-doctors/doctor-07-sylvester-mccoy.html">Sylvester McCoy</a></li>
+</ol>
+<p>&nbsp;</p>
 </body>
 </html>
