Updated Villians and Companions

--- a/website/the-doctors/doctor-05-peter-davidson.html
+++ b/website/the-doctors/doctor-05-peter-davidson.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>My Doctor Who Website</h1>
+<h1><a href="../index.html">My Doctor Who Website</a></h1>
 <h2>Peter Davidson</h2><!-- #BeginLibraryItem "/Library/The Doctor List.lbi" --><ol>
   <li><a href="doctor-01-william-hartnell.html">William Hartnel</a></li>
   <li><a href="doctor-02-patrick-troughton.html">Patrick Troughton</a></li>
