--- a/website/the-doctors/doctor-07-sylvester-mccoy.html
+++ b/website/the-doctors/doctor-07-sylvester-mccoy.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1><!-- #BeginLibraryItem "/Library/Title.lbi" -->My Doctor Who Website<!-- #EndLibraryItem --></h1>
+<h1><a href="../index.html">My Doctor Who Website</a></h1>
 <h2>Sylvester McCoy</h2>
 <p>&nbsp;</p>
 <!-- #BeginLibraryItem "/Library/The Doctor List.lbi" -->
