--- a/website/the-doctors/doctor-12-peter-capaldi.html
+++ b/website/the-doctors/doctor-12-peter-capaldi.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-<h1>My Doctor Who Website
-</h1>
+<h1><a href="../index.html">My Doctor Who Website
+</a></h1>
 <h2>Peter Capaldi</h2>
 <p>&nbsp;</p>
 <!-- #BeginLibraryItem "/Library/The Doctor List.lbi" -->
