--- a/website/the-companions/companion-04-lady-christina-de-souza.html
+++ b/website/the-companions/companion-04-lady-christina-de-souza.html
@@ -6,5 +6,21 @@
 </head>
 
 <body>
+<h1><a href="../index.html">My Doctor Who Website
+</a></h1>
+<h2>Lady Christina De Souza</h2>
+<p>&nbsp;</p>
+<!-- #BeginLibraryItem "/Library/Companions.lbi" -->
+<ul>
+  <li><a href="companion-01-rose-tyler.html">Rose Tyler</a></li>
+  <li><a href="companion-02-martha-jones.html">Martha Jones</a></li>
+  <li><a href="companion-03-jack-harkness.html">Jack Harkness</a></li>
+  <li><a href="companion-04-lady-christina-de-souza.html">Lady Christina de Souza</a></li>
+  <li><a href="companion-05-amy-pond.html">Amy Pond</a></li>
+  <li><a href="companion-06-rory-williams.html">Rory Williams</a></li>
+  <li><a href="companion-07-river-song.html">River Song</a></li>
+  <li><a href="companion-08-clara-oswald.html">Clara Oswald</a></li>
+</ul>
+<!-- #EndLibraryItem -->
 </body>
 </html>
