villians and companions changes 2

--- a/website/index.html
+++ b/website/index.html
@@ -8,8 +8,8 @@
 <body>
 <h1><!-- #BeginLibraryItem "/Library/Title.lbi" --><a href="index.html">My Doctor Who Website</a><!-- #EndLibraryItem --></h1>
 <h2>Homepage</h2>
-<!-- #BeginLibraryItem "/Library/The Doctor List.lbi" -->
-<ol>
+<h1>Doctors</h1>
+<!-- #BeginLibraryItem "/Library/The Doctor List.lbi" --><ol>
   <li><a href="the-doctors/doctor-01-william-hartnell.html">William Hartnel</a></li>
   <li><a href="the-doctors/doctor-02-patrick-troughton.html">Patrick Troughton</a></li>
   <li><a href="the-doctors/doctor-03-jon-pertwee.html">Joh Pertwee</a></li>
@@ -23,22 +23,21 @@
   <li><a href="the-doctors/doctor-11-matt-smith.html">Matt Smith</a></li>
   <li><a href="the-doctors/doctor-12-peter-capaldi.html">Peter Capaldi</a></li>
 </ol>
-<!-- #EndLibraryItem -->
-<p>&nbsp;</p>
-<h2>Villians</h2>
+<!-- #EndLibraryItem --><p>&nbsp;</p>
+<h1>Villians</h1>
 <!-- #BeginLibraryItem "/Library/Villians.lbi" -->
-<ul>
+<ol>
   <li><a href="the-villians/villian-01-daleks.html">Daleks</a></li>
   <li><a href="the-villians/villian-02-cybermen.html">Cybermen</a></li>
   <li><a href="the-villians/villian-03-the-master.html">The Master</a></li>
   <li><a href="the-villians/villian-04-lady-cassandra.html">Lady Cassandra</a></li>
   <li><a href="the-villians/villian-05-davros.html">Davros </a></li>
   <li><a href="the-villians/villian-06-weeping-angles.html">Weeping Angles</a></li>
-</ul>
+</ol>
 <!-- #EndLibraryItem --><h3>&nbsp;</h3>
-<h3>Companions</h3>
+<h1>Companions</h1>
 <!-- #BeginLibraryItem "/Library/Companions.lbi" -->
-<ul>
+<ol>
   <li><a href="the-companions/companion-01-rose-tyler.html">Rose Tyler</a></li>
   <li><a href="the-companions/companion-02-martha-jones.html">Martha Jones</a></li>
   <li><a href="the-companions/companion-03-jack-harkness.html">Jack Harkness</a></li>
@@ -47,8 +46,7 @@
   <li><a href="the-companions/companion-06-rory-williams.html">Rory Williams</a></li>
   <li><a href="the-companions/companion-07-river-song.html">River Song</a></li>
   <li><a href="the-companions/companion-08-clara-oswald.html">Clara Oswald</a></li>
-</ul>
-<!-- #EndLibraryItem -->
-<p>&nbsp;</p>
+</ol>
+<!-- #EndLibraryItem --><p>&nbsp;</p>
 </body>
 </html>
