--- a/website/the-companions/companion-03-jack-harkness.html
+++ b/website/the-companions/companion-03-jack-harkness.html
@@ -9,9 +9,8 @@
 <h1><a href="../index.html">My Doctor Who Website
 </a></h1>
 <h2>Jack Harkness</h2>
-<p>&nbsp;</p>
-<!-- #BeginLibraryItem "/Library/Companions.lbi" -->
-<ul>
+<p>&nbsp;</p><!-- #BeginLibraryItem "/Library/Companions.lbi" -->
+<ol>
   <li><a href="companion-01-rose-tyler.html">Rose Tyler</a></li>
   <li><a href="companion-02-martha-jones.html">Martha Jones</a></li>
   <li><a href="companion-03-jack-harkness.html">Jack Harkness</a></li>
@@ -20,7 +19,6 @@
   <li><a href="companion-06-rory-williams.html">Rory Williams</a></li>
   <li><a href="companion-07-river-song.html">River Song</a></li>
   <li><a href="companion-08-clara-oswald.html">Clara Oswald</a></li>
-</ul>
-<!-- #EndLibraryItem -->
-</body>
+</ol>
+<!-- #EndLibraryItem --></body>
 </html>
