--- a/website/the-villians/villian-05-davros.html
+++ b/website/the-villians/villian-05-davros.html
@@ -9,15 +9,48 @@
 <h1><a href="../index.html">My Doctor Who Website
 </a></h1>
 <h2>Davros</h2>
+<h1>Doctors</h1>
+<!-- #BeginLibraryItem "/Library/The Doctor List.lbi" -->
+<ol>
+  <li><a href="the-doctors/doctor-01-william-hartnell.html">William Hartnel</a></li>
+  <li><a href="the-doctors/doctor-02-patrick-troughton.html">Patrick Troughton</a></li>
+  <li><a href="the-doctors/doctor-03-jon-pertwee.html">Joh Pertwee</a></li>
+  <li><a href="the-doctors/doctor-04-tom-baker.html">Tom Baker</a></li>
+  <li><a href="the-doctors/doctor-05-peter-davidson.html">Peter Davidson</a></li>
+  <li><a href="the-doctors/doctor-06-colin-baker.html">Colin Baker</a></li>
+  <li><a href="the-doctors/doctor-07-sylvester-mccoy.html">Sylvester McCoy</a></li>
+  <li><a href="the-doctors/doctor-08-paul-mcgann.html">Paul McGann</a></li>
+  <li><a href="the-doctors/doctor-09-christopher-eccleston.html">Christopher Eccleston</a></li>
+  <li><a href="the-doctors/doctor-10-david-tennant.html">David Tennant</a></li>
+  <li><a href="the-doctors/doctor-11-matt-smith.html">Matt Smith</a></li>
+  <li><a href="the-doctors/doctor-12-peter-capaldi.html">Peter Capaldi</a></li>
+</ol>
+<!-- #EndLibraryItem -->
+<p>&nbsp;</p>
+<h1>Villians</h1>
 <!-- #BeginLibraryItem "/Library/Villians.lbi" -->
-<ul>
-  <li><a href="villian-01-daleks.html">Daleks</a></li>
-  <li><a href="villian-02-cybermen.html">Cybermen</a></li>
-  <li><a href="villian-03-the-master.html">The Master</a></li>
-  <li><a href="villian-04-lady-cassandra.html">Lady Cassandra</a></li>
-  <li><a href="villian-05-davros.html">Davros </a></li>
-  <li><a href="villian-06-weeping-angles.html">Weeping Angles</a></li>
-</ul>
+<ol>
+  <li><a href="the-villians/villian-01-daleks.html">Daleks</a></li>
+  <li><a href="the-villians/villian-02-cybermen.html">Cybermen</a></li>
+  <li><a href="the-villians/villian-03-the-master.html">The Master</a></li>
+  <li><a href="the-villians/villian-04-lady-cassandra.html">Lady Cassandra</a></li>
+  <li><a href="the-villians/villian-05-davros.html">Davros </a></li>
+  <li><a href="the-villians/villian-06-weeping-angles.html">Weeping Angles</a></li>
+</ol>
+<!-- #EndLibraryItem -->
+<h3>&nbsp;</h3>
+<h1>Companions</h1>
+<!-- #BeginLibraryItem "/Library/Companions.lbi" -->
+<ol>
+  <li><a href="the-companions/companion-01-rose-tyler.html">Rose Tyler</a></li>
+  <li><a href="the-companions/companion-02-martha-jones.html">Martha Jones</a></li>
+  <li><a href="the-companions/companion-03-jack-harkness.html">Jack Harkness</a></li>
+  <li><a href="the-companions/companion-04-lady-christina-de-souza.html">Lady Christina de Souza</a></li>
+  <li><a href="the-companions/companion-05-amy-pond.html">Amy Pond</a></li>
+  <li><a href="the-companions/companion-06-rory-williams.html">Rory Williams</a></li>
+  <li><a href="the-companions/companion-07-river-song.html">River Song</a></li>
+  <li><a href="the-companions/companion-08-clara-oswald.html">Clara Oswald</a></li>
+</ol>
 <!-- #EndLibraryItem -->
 <p>&nbsp;</p>
 </body>
