--- a/website/the-companions/companion-07-river-song.html
+++ b/website/the-companions/companion-07-river-song.html
@@ -8,9 +8,8 @@
 <body>
 <h1><a href="../index.html">My Doctor Who Website
 </a></h1>
-<h2>River Song</h2>
-<!-- #BeginLibraryItem "/Library/Companions.lbi" -->
-<ul>
+<h2>River Song</h2><!-- #BeginLibraryItem "/Library/Companions.lbi" -->
+<ol>
   <li><a href="companion-01-rose-tyler.html">Rose Tyler</a></li>
   <li><a href="companion-02-martha-jones.html">Martha Jones</a></li>
   <li><a href="companion-03-jack-harkness.html">Jack Harkness</a></li>
@@ -19,8 +18,7 @@
   <li><a href="companion-06-rory-williams.html">Rory Williams</a></li>
   <li><a href="companion-07-river-song.html">River Song</a></li>
   <li><a href="companion-08-clara-oswald.html">Clara Oswald</a></li>
-</ul>
-<!-- #EndLibraryItem -->
-<p>&nbsp;</p>
+</ol>
+<!-- #EndLibraryItem --><p>&nbsp;</p>
 </body>
 </html>
