--- a/website/the-companions/index.html
+++ b/website/the-companions/index.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>The Companions</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
+<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 </head>
 
 <body>
@@ -18,8 +20,18 @@
     <td colspan="2">[Banner]</td>
   </tr>
   <tr>
-    <td>[Secondary Navigation]</td>
-    <td>[Content]</td>
+    <td><p>&nbsp;</p>
+      
+      <table>
+        <tr>
+          <td>Rose Tyler</td>
+        </tr>
+        <tr>
+          <td>Amy Pond</td>
+        </tr>
+      </table>
+      </td>
+    <td>[<!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable -->]</td>
   </tr>
 </table>
 </body>
