--- a/website/the-companions/5-lady-christina.html
+++ b/website/the-companions/5-lady-christina.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
-<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
-<!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
+<!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
 </head>
 
 
@@ -26,25 +26,31 @@
       
       <table>
         <tr>
-          <td>Daleks</td>
+          <td>Rose Tyler</td>
         </tr>
         <tr>
-          <td>Cyberman</td>
+          <td>Amy Pond</td>
         </tr>
         <tr>
-          <td>The Master</td>
+          <td>Martha Jones</td>
         </tr>
         <tr>
-          <td>Lady Cassandra</td>
+          <td>Jack Harness</td>
         </tr>
         <tr>
-          <td>Davros</td>
+          <td>Lady Christina de Souza</td>
         </tr>
         <tr>
-          <td>Weeping Angels</td>
+          <td>Rory Williams</td>
+        </tr>
+        <tr>
+          <td>River Song</td>
+        </tr>
+        <tr>
+          <td>Clara Oswald</td>
         </tr>
       </table>
-      </td>
+    </td>
     <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
   </tr>
 </table>
