--- a/website/index.html
+++ b/website/index.html
@@ -45,7 +45,7 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
