--- a/website/the-doctors/index.html
+++ b/website/the-doctors/index.html
@@ -63,7 +63,11 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" --><!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>The Doctor</h1>
+      <p>The Doctor is the title character in the long-running BBC science fiction television series Doctor Who, and has also featured in two cinema feature films and one made-for-television film, as well as a vast range of spin-off novels, audio dramas and comic strips connected to the series.<br>
+      To date, eleven actors have played the lead role in the television series, with continuity maintained by the ability of the character's species to regenerate. Several other actors have played the character on stage and film, in audio dramas, and in occasional special episodes of the series. The character's enduring popularity led the Daily Telegraph to dub him &quot;Britain's favourite alien&quot;. The Doctor in his eleventh incarnation is played by Matt Smith, who took on the role in January 2010 and became the first Doctor to be nominated for a BAFTA Award for Best Actor in a Leading Role in 2011. On 1 June 2013, it was announced that Matt Smith would leave the series during the 2013 Christmas special. On 4 August 2013, it was announced that Peter Capaldi would play the Doctor's twelfth incarnation.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
