--- a/website/the-villans/1-daleks.html
+++ b/website/the-villans/1-daleks.html
@@ -45,7 +45,15 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>Daleks      </h1>
+      <p>Daleks were the armoured, mutated descendants of the Kaleds of the planet Skaro. They fought the Time Lords in the Last Great Time War, ending in the near-total destruction of both races. The Daleks were hated and feared throughout time and space. They were the oldest and most frequent foes of the Doctor, having faced him several times in every one of his incarnations.The Daleks were conceived by science-fiction writer Terry Nation and first appeared in the 1963 Doctor Who serial The Daleks, in the shells designed by Raymond Cusick.<br>
+        Although the Daleks looked entirely robotic, they were in fact cybernetic organisms or cyborgs, with a biological body encased in and supported by a protective outer shell of Dalekanium metal armour, armed and mobile. These were actually the Mark III travel machines designed to carry their mutant forms, and they were not true integrated biomechanoids. In this respect, they were somewhat similar to a Cyberman; unlike them, however, the Daleks' bodies had mutated so drastically from their Kaled ancestors they had lost all humanoid appearance, save for one eye. The Daleks shared information using a sort of artificial telepathic network known as the Pathweb.<br>
+        The Dalek casing, originally called a &quot;Mark III travel machine&quot;, could be separated into three sections.<br>
+▪	Top: The Dalek's means of vision and communication, a dome with a set of twin speaker 'lights' (referred to as luminosity dischargers). On the upper part of the sides and a telescope-like eyestalk in the middle. This was attached to the mid-section by a &quot;neck&quot;.<br>
+▪	Midsection: On the Dalek's midsection, the gunstick and manipulator arm were attached. These provided the Dalek's means of offence and operating capabilities. In later models, the midsection was capable of swiveling.<br>
+▪	Bottom: The Dalek's means of mobility was a sturdy base with a skirt-like structure of plates studded with globes. This allowed movement and, in later models, flight. </p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
