--- a/website/the-villans/3-the-master.html
+++ b/website/the-villans/3-the-master.html
@@ -45,7 +45,14 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>The Master</h1>
+      <p>Portrayed by <b>Geoffery Beevers</b></p>
+      <p>The Master — originally called Koschei and known by many other temporary aliases — was a renegade Time Lord and the Doctor's arch-nemesis.<br>
+        Although they were originally boyhood friends, one of the Master's primary goals was to destroy the Doctor and Earth while acting on a number of schemes, both petty and gross. <br>
+        The Master was referred to as a &quot;jackanapes&quot; and an &quot;unimaginative plodder&quot; by the Third Doctor , the &quot;quintessence of evil&quot; by the Fourth Doctor, &quot;one of the most evil and corrupt beings [the] Time Lord race [had] ever produced&quot; and that his &quot;crimes [were] without number and [his] villainy without end&quot; by High Council President Borusa, &quot;pure evil&quot; by the Eighth Doctor, &quot;stone-cold brilliant&quot; by the Tenth Doctor , and &quot;the Time Lords' most infamous child&quot; by Time Lord founder Rassilon. <br>
+      It was eventually discovered that the Master's diabolical madness was partially the result of a genuine malady in the form of a never-ending drumming sound that had been retroactively implanted inside his head by the Time Lords on the last day of the Last Great Time War to further their own goals.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
