--- a/website/the-villans/4-lady-cassandra.html
+++ b/website/the-villans/4-lady-cassandra.html
@@ -45,7 +45,13 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>Lady Cassandra</h1>
+      <p>Portrayed by <b>Zoe Wanamaker</b></p>
+      <p>Lady Cassandra O'Brien.Δ17 (pronounced &quot;dot delta seventeen&quot;), or simply Lady Cassandra, was a former human in the far future. Along with other rich and powerful people of the universe, Cassandra was on Platform One, a space station orbiting Earth in the year 5,000,000,000, set to witness the destruction of the planet by the expansion of the Sun.<br>
+        According to Cassandra, her father, a Texan, and her mother, who came from the Arctic Desert, were the last to be buried in Earth's soil. She was born a male on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;.<br>
+      Cassandra, who was probably an aristocrat, was very elitist and &quot;looked down her nose&quot; at the Working-class Rose Tyler, whom she considered &quot;common&quot;.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
