--- a/website/about-the-doctor.html
+++ b/website/about-the-doctor.html
@@ -111,7 +111,7 @@
         </tr>
       </table>
     </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->
+    <td><!-- InstanceBeginEditable name="Content Area" -->
       <p>&nbsp;</p>
       <p>&nbsp;</p>
     <!-- InstanceEndEditable --></td>
