--- a/website/about-the-site.html
+++ b/website/about-the-site.html
@@ -111,7 +111,7 @@
         </tr>
       </table>
     </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
