--- a/website/the-companions/5-lady-christina.html
+++ b/website/the-companions/5-lady-christina.html
@@ -51,7 +51,13 @@
         </tr>
       </table>
     </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>Lady Christina de Souza</h1>
+      <p>Portrayed by <b>Michelle Ryan</b></p>
+      <p>Lady Christina de Souza was a friend of the Tenth and Eleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.<br>
+        Christina de Souza was a notorious thief who stole for thrill, rather than profit as most thieves would; she was bored with her aristocratic upbringing. When she met the Tenth Doctor, Christina had already built a considerable reputation and was relentlessly pursued by Detective Inspector Macmillan.<br>
+      Christina was fiercely independent and enjoyed defying the Doctor's wishes. She was an expert thief, but only stole for the adrenaline rush. She was bored by her aristocratic life and had a high opinion of herself. She used her obvious charms and good looks to win people over, often for selfish reasons. She showed great enthusiasm for joining the Doctor on his travels, but quickly forgave him when he refused. She could also speak French fluently, which amused the Doctor. She had an untrustworthy streak in her; she abandoned her partner in crime, who was probably also her lover, when he was caught by guards during her escape from the museum. Despite that, she was kind enough to give the cup over to save lives. </p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
