--- a/website/the-companions/7-river-song.html
+++ b/website/the-companions/7-river-song.html
@@ -51,7 +51,12 @@
         </tr>
       </table>
     </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>River Song</h1>
+      <p>Portrayed by <b>Alex Kingston</b></p>
+      <p>&quot;River Song&quot;, the primary alias of the third incarnation of Melody Pond, was a &quot;child of the TARDIS&quot; and a known wife of the Eleventh Doctor. She was human with Time Lord characteristics, conceived by her parents, Amy Pond and Rory Williams, aboard the TARDIS as it travelled through the time vortex, and then conditioned by the Silence. (TV: A Good Man Goes to War) This gave her great strength, the ability to regenerate and a great understanding of the complex principles of time and space. (TV: The Time of Angels, Day of the Moon, A Good Man Goes to War, The Wedding of River Song) She loved the Doctor, and shared a long-lasting relationship with him. River was one of the very few people who knew the Doctor's true name. (TV: Forest of the Dead, The Name of the Doctor)<br>
+      Melody was stolen from her parents as an infant by Madame Kovarian to become a weapon of the Silence in their war against the Doctor. After potentially her second regeneration, she killed the Eleventh Doctor, but then broke her mental conditioning to give her remaining regenerations to revive his corpse. </p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
