--- a/website/the-companions/8-clara-oswald.html
+++ b/website/the-companions/8-clara-oswald.html
@@ -51,7 +51,12 @@
         </tr>
       </table>
     </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>Clara Oswald</h1>
+      <p>Portrayed by <b>Jenna Colemann</b></p>
+      <p>Clara Oswald was a companion to the Eleventh Doctor. According to the Doctor, Clara was simply &quot;not possible&quot;. Though assured by the eminent empathic psychic Emma Grayling and the TARDIS scanner that Clara was just an &quot;ordinary girl&quot;, the Doctor couldn't believe that to be true and thought her to be &quot;the only mystery worth solving&quot;.<br>
+      In fact, the truth was somewhere in between. She was a physically ordinary human girl from the 21st century, but one who had made an extraordinary sacrifice to save the Doctor's life. Upholding a personal credo not to walk away from danger in the service of others, she chose to enter the Doctor's timeline in his tomb on Trenzalore in order to reverse the damage done to his timeline by the Great Intelligence. This act allowed the time winds to break her into millions of copies of herself that, according to River Song, weren't quite the &quot;real&quot; Clara, but which were nevertheless capable of combatting the Great Intelligence's attack. After her heroism revivified the Doctor, he then returned the favour, guiding the original, 21st century Clara back out of his timeline.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
