--- a/website/the-doctors/7-sylvester-mccoy.html
+++ b/website/the-doctors/7-sylvester-mccoy.html
@@ -63,7 +63,13 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>The Seventh Doctor </h1>
+      <p>Portrayed by <b>Sylvester McCoy</b></p>
+      <p>The Seventh Doctor is the seventh incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor Sylvester McCoy.<br>
+        Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive, and manipulative. His first companion was Melanie Bush (Bonnie Langford), a computer programmer who travelled with his previous incarnation, and who is soon succeeded by troubled teenager and explosives expert Ace (Sophie Aldred), who becomes his protégée.<br>
+      The Seventh Doctor has the most profound change in attitude of any of the Doctor's incarnations, beginning as someone bumbling (to the extent of putting himself in danger but not at the cost of his overall great intelligence and benevolent intentions) and progressing into a driven, dark gamemaster whose plans to defeat his adversaries, both old and new, would play out across space and time. He generally displayed an affable, curious, knowledgeable, easygoing, excitable, and charming air. However, as he began to choose his battles and keep a tighter grip on his secrets - from his plans to his very identity - he also presented more serious, contemplative, secretive, wistful, and manipulative sides with undercurrents of mischief and authority (constantly giving the impression that there was more to him than met the eye).</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
