--- a/website/the-doctors/8-paul-mcgann.html
+++ b/website/the-doctors/8-paul-mcgann.html
@@ -63,7 +63,13 @@
         </tr>
       </table>
       </td>
-    <td width="83"><!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable --></td>
+    <td><!-- InstanceBeginEditable name="Content Area" -->
+      <h1>The Eighth Doctor</h1>
+      <p>Portrayed by <b>Paul McGann</b></p>
+      <p>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Paul McGann. Though he only appeared on television in one TV film, his adventures are extensively portrayed in other media.<br>
+        Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration. In the continued adventures of the character depicted in audio dramas, novels and comic books he travels alongside numerous other companions, including self-styled &quot;Edwardian Adventuress&quot; Charley, the alien Destrii and present-day humans Lucie and Sam.<br>
+      The Eighth Doctor encouraged those around him to seize life instead of withdrawing from it. He also seemed to enjoy giving people hints of their own futures, probably to prod them into making the right decisions. It is unclear if this Doctor's knowledge of people's futures comes from historical expertise, psychic power, or precognitive ability.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 </body>
